syntax = "proto3";

package v1api;

option go_package = "./proto;v1api";

service V1 {
	rpc GenerateKey(GenerateKeyRequest) returns (GenerateKeyResponse) {}
	rpc ListKeys(ListRequest) returns (ListResponse) {}
	rpc RevokeKey(RevokeRequest) returns (RevokeResponse) {}
	rpc UnblockKey(UnblockKeyRequest) returns (UnblockKeyResponse) {}
	rpc BlockKey(BlockKeyRequest) returns (BlockKeyResponse) {}
}


message GenerateKeyRequest {
	repeated string scopes = 1;
	string description = 2;
}

message GenerateKeyResponse {
	string api_key = 1;
}

message ListRequest {}

message ListResponse {
	repeated APIKey api_keys = 1;
}

message APIKey {
	string id = 1;
	string description = 2;
	int64 created_time = 3;
	repeated string scopes = 4;
}

message RevokeRequest {
	string id = 1;
}

message RevokeResponse {}

message Event {
	RequestEvent request = 1;
	APIKeyCreateEvent api_key_create = 2;
	string type = 3;
	APIKeyRevokeEvent api_key_revoke = 4;
	APIEnableEvent api_enable = 5;
	APIDisableEvent api_disable = 6;
}

message APIKeyCreateEvent {
	string user_id = 1;
	string namespace = 2;
	string api_key_id = 3;
	repeated string scopes = 4;
}

message APIEnableEvent {
	string name = 1;
}

message APIDisableEvent {
	string name = 1;
}

message RequestEvent {
	string user_id = 1;
	string namespace = 2;
	string api_key_id = 3;
	string url = 4;
	string api_name = 5;
	string endpoint_name = 6;
}

message APIKeyRevokeEvent {
	string user_id = 1;
	string namespace = 2;
	string api_key_id = 3;
}

message BlockKeyRequest {
	string user_id = 1;
	string namespace = 2;
	string key_id = 3;
	string message = 4;
}

message BlockKeyResponse {}

message UnblockKeyRequest {
	string user_id = 1;
	string namespace = 2;
	string key_id = 3;
}

message UnblockKeyResponse {}


message EnableAPIRequest {
	string name = 1;
}

message EnableAPIResponse {}

message DisableAPIRequest {
	string name = 1;
}

message DisableAPIResponse {}

message ListAPIsRequest {}

message ListAPIsResponse {
	repeated string names = 1;
}
